public class GeneroMusical {
    private String nombre;

    public GeneroMusical(String nombre) {
        this.nombre = nombre;
    }

    public String getNombre() {
        return nombre;
    }
}