public class Letra {
    private String texto;

    public Letra(String texto) {
        this.texto = texto;
    }
    public String getTexto() { return texto; }
}