public class Partitura {
    private String tonalidad;

    public Partitura(String tonalidad) {
        this.tonalidad = tonalidad;
    }
}