@startuml
skinparam style strictuml
skinparam classAttributeIconSize 0

class Letra
class Partitura
class GeneroMusical
class Compositor
class Productor
class Instrumento
class Reproductor
class Banda
class Artista
class Cancion
class Album
class Playlist
class Oyente

' Agregaciones 
Banda o-- Artista : agrupa 
Album o-- Cancion : contiene 
Playlist o-- Cancion : recopila 

' Composición 
Oyente *-- Playlist : posee 

' Asociaciones 
Artista --> Instrumento : toca 
Cancion --> Letra : tiene 
Cancion --> Partitura : escrita en 
Cancion --> GeneroMusical : pertenece a 
Cancion --> Compositor : compuesta por 
Cancion --> Productor : producida por 
Cancion --> Artista : interpretada por 

' Dependencias 
Oyente ..> Cancion : escucha 
Oyente ..> Reproductor : usa 
Reproductor ..> Cancion : procesa 

@enduml